--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
   <head>
     <title>rokaakor</title>
-    <!--G-fonts-->
+    <!--G-FONTS-->
+      <!--Title fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <!--Text fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600;700&display=swap" rel="stylesheet">
 
-    <!--OTHER FONTS-->
-    
 
     <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <body>
-      <h1 class="t">Houston</h1>
-      <h2>Loacation and hours</h2>
-      <h2>About us</h2>
+</head>
+
+<body>
+    <h1 class="t">Houston</h1>
+    <h2>Loacation and hours</h2>
+    <h2>About us</h2>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
     <script src="script.js"></script>
-  </body>
-</html>
+</body></html>
